Add interesting info endpoint using augur-go
